# currently_playing

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/: example.rs  gui.rs  media.rs  media_async.rs  simple_benchmark.rs  test.rs  websockets.rs
extensions/: currently_playing.js  install_dev.sh
src/: lib.rs  listener.rs  ws.rs
src/platform/: linux.rs  mod.rs  windows.rs
