[package]
name = "currently_playing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"

futures-channel = "0.3"

[dependencies.tokio]
version = "1.35"
default-features = false
features = ["net"]

[dependencies.tokio-tungstenite]
version = "0.21.0"
optional = true

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["sink", "std"]

[dev-dependencies.tokio]
version = "1.35"
default-features = false
features = ["io-std", "macros", "net", "rt-multi-thread", "time"]

[features]
default = ["ws"]
# Websocket support
ws = ["tokio-tungstenite"]
