[package]
name = "currently_playing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"

futures-channel = "0.3"

[dependencies.tokio]
version = "1.35"
default-features = false
features = ["net"]

[dependencies.tokio-tungstenite]
version = "0.21.0"
optional = true

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["sink", "async-await", "std"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
    "Foundation_Metadata",
#    "Win32_Media_MediaFoundation",
#    "Media_Core",
    "Storage_FileProperties",
    "Storage_BulkAccess",
    "Storage_Compression",
    "Storage_Streams",
    "Media_Control"
]

[dev-dependencies]
benchmarking = "0.4"

[dev-dependencies.tokio]
version = "1.35"
default-features = false
features = ["io-std", "macros", "net", "rt-multi-thread", "time"]

[features]
default = ["ws"]
# Websocket support
ws = ["tokio-tungstenite"]
