[package]
name = "currently_playing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = "^3.4"

thiserror = "^1.0"
anyhow = "^1.0"

futures-channel = "^0.3"
futures-locks = "^0.7"

[dependencies.tokio]
version = "^1.35"
default-features = false
features = ["net"]

[dependencies.tokio-util]
version = "^0.7"
features = ["rt"]

[dependencies.tokio-tungstenite]
version = "^0.24"
optional = true

[dependencies.futures-util]
version = "^0.3"
default-features = false
features = ["sink", "async-await", "std"]

[target.'cfg(windows)'.dependencies.windows]
version = "^0.58"
features = [
    "Foundation_Metadata",
    "Storage_Streams",
    "Media_Control"
]

[target.'cfg(target_os = "linux")'.dependencies.mpris]
version = "^2.0"

[dev-dependencies]
benchmarking = "^0.4"
eframe = "0.29"
env_logger = "^0.11"

[dev-dependencies.image]
version = "0.25"
features = ["default"]

[dev-dependencies.egui_extras]
version = "0.29"
features = ["all_loaders"]

[dev-dependencies.tokio]
version = "^1.35"
default-features = false
features = ["io-std", "macros", "net", "rt-multi-thread", "time"]

[features]
default = ["ws"]
# Websocket support
ws = ["tokio-tungstenite"]
